# App-client

./: .gitignore  CMakeLists.txt  dockerfile  temp.html
Common/Global/: CMakeLists.txt
Common/Global/include/: Singleton.hpp  Singleton2.hpp  global.h
Common/Global/src/: global.cpp
Common/ListItemBase/: CMakeLists.txt
Common/ListItemBase/include/: ListItemBase.h
Common/ListItemBase/src/: ListItemBase.cpp
Common/Message/: CMakeLists.txt
Common/Message/include/: CacheMessage.h  ChatMessage.h  LoginMessage.h  Message.h  MessageBase.h  RegisterMessage.h
Common/Message/src/: CacheMessage.cpp  ChatMessage.cpp  LoginMessage.cpp  Message.cpp  MessageBase.cpp  RegisterMessage.cpp
Common/Timer/: CMakeLists.txt
Common/Timer/include/: Timer.h
Common/Timer/src/: Timer.cpp
Doc/: Community.md
PreHead/include/: phc.h
RunGameScript/: run.py  run_game.bat
RunGameScript/script/: run_game.sh
Windows/AddressBookWindow/: CMakeLists.txt
Windows/AddressBookWindow/include/: AddFriendGroup.h  AddressBookWindow.h  FriendApplyItem.h  FriendListItem.h
Windows/AddressBookWindow/src/: AddFriendGroup.cpp  AddressBookWindow.cpp  FriendApplyItem.cpp  FriendListItem.cpp
Windows/ChatWindow/: CMakeLists.txt
Windows/ChatWindow/include/: ChatWindow.h  FriendChatListItem.h  MessageMgr.h
Windows/ChatWindow/src/: ChatWindow.cpp  FriendListItem.cpp  MessageMgr.cpp
Windows/CommunityWindow/: CMakeLists.txt
Windows/CommunityWindow/include/: Community.h  CommunityMainWindow.h  CommunityMgr.h  Post.h  PostMgr.h
Windows/CommunityWindow/src/: CommunityMainWindow.cpp
Windows/FriendWindow/: CMakeLists.txt
Windows/FriendWindow/include/: FriendListItem.h  FriendWindow.h
Windows/FriendWindow/src/: FriendListItem.cpp  FriendWindow.cpp
Windows/FriendWindow/ui/: friendlistitem.ui  friendwindow.ui
Windows/GroupWindow/: CMakeLists.txt
Windows/HomeWindow/: CMakeLists.txt
Windows/HomeWindow/include/: ChatWindow.h  HomeWindow.h
Windows/HomeWindow/src/: HomeWindow.cpp
Windows/HomeWindow/ui/: chatpage.ui  homewindow.ui
Windows/LoginWindow/: CMakeLists.txt
Windows/LoginWindow/include/: LogInUi.h  LogInWindow.h
Windows/LoginWindow/qrc/: pic.qrc  qss.qrc
Windows/LoginWindow/res/qss/: style-1.qss
Windows/LoginWindow/src/: LogInUi.cpp  LogInWindow.cpp
Windows/LoginWindow/ui/: new_login.ui
Windows/PlayGameWindow/: CMakeLists.txt
Windows/RegisterWindow/: CMakeLists.txt
Windows/RegisterWindow/include/: RegisterUi.h  RegisterWindow.h
Windows/RegisterWindow/src/: Register.cpp  RegisterWindow.cpp
Windows/RegisterWindow/ui/: register.ui
Windows/WebApp/: CMakeLists.txt
Windows/WebApp/include/: MyObject.h  WebAppWindow.h
Windows/WebApp/src/: MyObject.cpp  WebAppWindow.cpp
function/Communicator/: CMakeLists.txt
function/Communicator/include/: CommunicatorClient.h
function/Communicator/src/: CommunicatorClient.cpp
function/ConnectPool/: CMakeLists.txt
function/ConnectPool/include/: ConnectPool.h
function/ConnectPool/src/: ConnectPool.cpp
function/HttpManager/: CMakeLists.txt
function/HttpManager/include/: AuthHttpManager.h  BaseHttpManager.h  CategoryHttpManager.h  CheckHttpManager.h  HttpManager.h  PostHttpManager.h  TitleHttpManager.h  UserHttpManager.h  WebAppHtttpManager.h
function/HttpManager/src/: AuthHttpManagr.cpp  BaseHttpManager.cpp  CategoryHttpManager.cpp  HttpManager.cpp  PostManager.cpp  TitleManager.cpp  UserManager.cpp
function/PersonManager/: CMakeLists.txt
function/PersonManager/include/: PersonManager.h
function/PersonManager/src/: PersonManager.cpp
function/PersonalInfoManager/: CMakeLists.txt
function/PersonalInfoManager/include/: PersonalInfoManager.h
function/PersonalInfoManager/src/: PersonalInfoManager.cpp
function/ServerConfigManager/: CMakeLists.txt
function/ServerConfigManager/include/: ServerConfigManager.h
function/ServerConfigManager/src/: ServerConfigManager.cpp
function/UserInfoManager/: CMakeLists.txt
function/UserInfoManager/include/: UserInfoManager.h
function/UserInfoManager/src/: UserInfoManager.cpp
function/WebSocketManager/: CMakeLists.txt
function/WebSocketManager/include/: WebSocketMgr.h
function/WebSocketManager/src/: WebSocketMgr.cpp
src/: main.cpp
ui/: addressbookwindow.ui  chatwindow.ui  community.ui  findfriend.ui  friendapplyitem.ui  friendchatlistitem.ui  friendlistitem.ui  homewindow.ui  register.ui
